--- a/Demo/index.html
+++ b/Demo/index.html
@@ -7,23 +7,42 @@
     <title>Index</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="src/css/style.min.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-        crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="src/css/animate.css">
+    <link rel="stylesheet" type="text/css" href="src/css/bootstrap.css">
+    <script type="text/javascript" src="src/js/minify/jquery-3.3.1.min.js"></script>
+    <!-- <script src="" src="src/js/minify/animation.min.js"></script> -->
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
-        crossorigin="anonymous">
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
-    <script src="" src="src/js/minify/animation.min.js"></script>
 </head>
 
 <body>
-    <div>
-        <button class="btn" type="button">Step 1</button>
+    <div class="container">
+        <button class="btn btn1" type="button">Step 1</button>
+        <div class="step2" style="display:none">
+            <h1>Example</h1>
+            <button class="btn btn2" type="button">Step 2</button>
+        </div>
+
+        <div class="step3" style="display:none">
+            <h1>Example</h1>
+            <button class="btn btn3" type="button">Step 3</button>
+        </div>
+
+        <div class="step4" style="display:none">
+            <h1>Example</h1>
+            <button class="btn btn4" type="button">Step 4</button>
+        </div>
+
+        <div class="step5" style="display:none">
+            <h1>Example</h1>
+            <button class="btn btn5" type="button">Step 5</button>
+        </div>
     </div>
+    <script type="text/javascript" src="src/js/animation.js"></script>
+    <script>
+        jQuery(document).ready(function () {
+            Animation.init();
+        });
+    </script>
 </body>
 
 </html>
